--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.19",
     "date-fns": "^4.1.0",
+    "i18next": "^25.3.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
@@ -43,6 +46,7 @@
     "@eslint/js": "^9.30.1",
     "@tanstack/router-cli": "^1.128.3",
     "@tanstack/router-plugin": "^1.128.3",
+    "@types/country-flag-icons": "^1.2.2",
     "@types/node": "^24.0.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
