--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 3000",
-    "build": "tsc -b && vite build",
+    "build": "tsr generate && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "generate-routes": "tsr generate"
